Components/Navbar.module.css
.navbar {
    display: flex;
    flex-direction: column;
    padding: 1.5rem 1.5rem 0 1.5rem;
}

.navWrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 1rem;
    align-items: center;
}

.navLinks {
    display: flex;
    gap: 2.375rem;
}

.link {
    font-family: 'Poppins';
    font-weight: 400;
    color: var(--neutral-color-2);
    text-decoration: none;
    position: relative;
}

.link::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 4px;
    border-radius: 4px;
    background-color: var(--accent-color);
    bottom: 0;
    left: 0;
    transform-origin: right;
    transform: scaleX(0);
    transition: transform .3s ease-in-out;
}

.link:hover::before {
    transform-origin: left;
    transform: scaleX(1);
}


.buttonWrapper {
    display: flex;
    padding-top: .5rem;
}


.mobileNav {
    height: 100vh;
    /* width: 55%; */
    position: fixed;
    z-index: 98;
    top: 0;
    right: 0;
    background-color: var(--background-color);
    display: flex;
    flex-direction: column;
    gap: 4rem;

    padding: 6rem 1.5rem;
    font-size: var(--body-500);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
    /* transition: .5s ease-in-out; */
}

.mobileNav.active {
    right: 0;
}

.mobileLinks {
    display: flex;
    flex-direction: column;
    gap: 1.75rem;
}

.mobileLink {
    color: var(--neutral-color-2);
    font-family: 'Poppins';
    font-weight: 400;
    font-size: 1.125rem;
    text-decoration: none;
}

.logo {
    text-decoration: none;
}

.socials {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    gap: 1rem;
}

.socialLogo {
    width: 1.75rem;
    height: 1.75rem;
}

.logoImg {
    width: 3.5rem;
    max-height: 2.1875rem;
}

.navbar li {
    list-style: none;
}

/* Hamburger menu */
.hamburger {
    position: relative;
    display: block;
    width: 1.5rem;
    appearance: none;
    background: none;
    border: none;
    outline: none;
    cursor: pointer;
    z-index: 99;
}

.hamburger .bar,
.hamburger:after,
.hamburger:before {
    content: '';
    display: block;
    width: 100%;
    height: 3px;
    border-radius: 10rem;
    background-color: var(--neutral-color-2);
    margin: 5px 0;
    transition: .4s;
}

.hamburger.isActive:before {
    transform: rotate(-45deg) translate(-5px, 4px);
    background-color: var(--neutral-color-2);
}

.hamburger.isActive .bar {
    opacity: 0;
}

.hamburger.isActive:after {
    transform: rotate(45deg) translate(-7px, -7px);
    background-color: var(--neutral-color-2);
}

@media (min-width: 48rem) {

    .hamburger {
        display: none;
    }

    .navbar {
        padding: 2.5rem 2.5rem 0 2.5rem;
    }

    .logoImg {
        width: 3.75rem;
    }

}


@media (min-width: 1440px) {
    .navLinks {
        gap: 5rem;
        font-size: 1rem;
    }

    .logoImg {
        width: 3.25rem;
    }

    .navbar {
        padding: 3.5rem 3.5rem 0 3.5rem;
    }

}

